force-app/main/default/objects/Snapshot__c/fields/Account_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Summary__c</fullName>
    <label>Account Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>