force-app/main/default/objects/Snapshot__c/fields/AM_Subscription_Attainment__c.field-meta.xml
<CustomField>
    <fullName>AM_Subscription_Attainment__c</fullName>
    <label>AM_Subscription_Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>