force-app/main/default/objects/Snapshot__c/fields/CAM_Goal_365_Days_1__c.field-meta.xml
<CustomField>
    <fullName>CAM_Goal_365_Days_1__c</fullName>
    <formula>(Days_left_in_this_Quarter__c * (  CAM_Targets_21_22__c /90)) + (90*( CAM_Next_Quarter_365_Days__c /90))+(90*(  CAM_Next2_Quarter_365_Days_Goal__c /90))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM - Goal 365 Days(1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>