force-app/main/default/objects/Snapshot__c/fields/CAM_Goal_365_Days_2__c.field-meta.xml
<CustomField>
    <fullName>CAM_Goal_365_Days_2__c</fullName>
    <formula>(90*( CAM_Next_3_Quarter_365_Days_Goal__c /90))+((90- Days_left_in_this_Quarter__c *(  CAM_Next_4_Quarter_365_Days_Goal__c /90)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM - Goal 365 Days(2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>