force-app/main/default/objects/Snapshot__c/fields/CAM_NetNEW_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CAM_NetNEW_Total_Price__c</fullName>
    <formula>IF(  TEXT(Type__c ) = &apos;Existing Business&apos;,  CAM_Quota_Attainment__c ,  IF(TEXT(Type__c ) = &apos;New Business&apos;,  Total_Price__c , 0.00) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM&amp;NetNEW Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>