force-app/main/default/objects/Snapshot__c/fields/CAM_Next2_Quarter_365_Days_Goal__c.field-meta.xml
<CustomField>
    <fullName>CAM_Next2_Quarter_365_Days_Goal__c</fullName>
    <formula>IF(Fiscal_Year__c=&apos;2021&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 598750,
2, 598750,
3, 598750,
4, 718500,
5, 718500,
6, 718500,
7, 729278,
8, 729278,
9, 729278,
10, 740217,
11, 740217,
12, 740217,
0),
IF(Fiscal_Year__c=&apos;2022&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 751320,
2, 751320,
3, 751320,
4, 762590,
5, 762590,
6, 762590,
7, 762590,
8, 762590,
9, 762590,
10, 762590,
11, 762590,
12, 762590,
0),0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM - Next2 Quarter (365 Days Goal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>