force-app/main/default/objects/Snapshot__c/fields/CAM_Next_Quarter_365_Days__c.field-meta.xml
<CustomField>
    <fullName>CAM_Next_Quarter_365_Days__c</fullName>
    <formula>IF(Fiscal_Year__c=&apos;2021&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 598750,
2, 598750,
3, 598750,
4, 598750,
5, 598750,
6, 598750,
7, 718500,
8, 718500,
9, 718500,
10, 729278,
11, 729278,
12, 729278,
0),
IF(Fiscal_Year__c=&apos;2022&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 740217,
2, 740217,
3, 740217,
4, 751320,
5, 751320,
6, 751320,
7, 762590,
8, 762590,
9, 762590,
10, 762590,
11, 762590,
12, 762590,
0),0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM - Next Quarter (365 Days Goal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>