force-app/main/default/objects/Snapshot__c/fields/CAM_Next_Quarter_Target_2021__c.field-meta.xml
<CustomField>
    <fullName>CAM_Next_Quarter_Target_2021__c</fullName>
    <formula>CASE(MONTH(  Snapshopt_Created_Date2__c ),
1, 598750,
2, 598750,
3, 598750,
4, 598750,
5, 598750,
6, 598750,
7, 718500,
8, 718500,
9, 718500,
10,729278,
11,729278,
12,729278,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM Next Quarter Target 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>