force-app/main/default/objects/Snapshot__c/fields/CAM_Rolling_90Days__c.field-meta.xml
<CustomField>
    <fullName>CAM_Rolling_90Days__c</fullName>
    <formula>((CAM_Target_2021__c/90)*(Days_left_in_this_Quarter__c ))+((CAM_Next_Quarter_Target_2021__c/90)*( Days_left_in_next_quarter__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM Rolling 90Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>