force-app/main/default/objects/Snapshot__c/fields/CAM_Target_2021__c.field-meta.xml
<CustomField>
    <fullName>CAM_Target_2021__c</fullName>
    <formula>CASE(MONTH(  Snapshopt_Created_Date2__c ),
1, 479000,
2, 479000,
3, 479000, 
4, 598750, 
5, 598750, 
6, 598750,
7, 598750,
8, 598750,
9, 598750,
10, 718500,
11, 718500,
12, 718500,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM Target 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>