force-app/main/default/objects/Snapshot__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>IF(  TEXT( Stage__c )  = &apos;Closed Won&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>