force-app/main/default/objects/Snapshot__c/fields/Days_left_in_next_quarter__c.field-meta.xml
<CustomField>
    <fullName>Days_left_in_next_quarter__c</fullName>
    <formula>90- Days_left_in_this_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left in next quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>