force-app/main/default/objects/Snapshot__c/fields/Days_left_in_this_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Days_left_in_this_Quarter__c</fullName>
    <formula>IF(MONTH(Snapshopt_Created_Date2__c) &lt;= 3, 
DATE(YEAR(Snapshopt_Created_Date2__c ), 03 , 31 ), 
IF(MONTH(Snapshopt_Created_Date2__c ) &lt;= 6, 
DATE(YEAR(Snapshopt_Created_Date2__c ), 06 , 30 ), 
IF(MONTH(Snapshopt_Created_Date2__c ) &lt;= 9, 
DATE(YEAR(Snapshopt_Created_Date2__c ), 09 , 30 ), 
DATE(YEAR(Snapshopt_Created_Date2__c ), 12 , 31 )))) 
- 
Snapshopt_Created_Date2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left in this Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>