force-app/main/default/objects/Snapshot__c/fields/Direct_Customer__c.field-meta.xml
<CustomField>
    <fullName>Direct_Customer__c</fullName>
    <formula>IF( Account_Name__c   &lt;&gt;  Partner__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Customer?</label>
    <type>Checkbox</type>
</CustomField>