force-app/main/default/objects/Snapshot__c/fields/Enhancement_a__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_a__c</fullName>
    <label>Enhancement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>