force-app/main/default/objects/Snapshot__c/fields/Goal_Org_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Goal_Org_Quarterly__c</fullName>
    <formula>( ORG_Goal__c  / 90) * (90- Days_left_in_this_Quarter__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Org Quarterly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>