force-app/main/default/objects/Snapshot__c/fields/Initial_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Initial_Purchase__c</fullName>
    <label>Initial Purchase</label>
    <type>Date</type>
</CustomField>