force-app/main/default/objects/Snapshot__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>55</length>
    <type>Text</type>
</CustomField>