force-app/main/default/objects/Snapshot__c/fields/List_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Total__c</fullName>
    <label>List Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>