force-app/main/default/objects/Snapshot__c/fields/Net_New_Goal_365_Days1__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Goal_365_Days1__c</fullName>
    <formula>( Days_left_in_this_Quarter__c * ( Net_New_Targets_21_22__c /90)) + (90*( Net_New_365_Days_Goal__c /90))+(90*( NN_Next_2_Quarter_365_Days_Goal__c /90))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NN - Goal 365 Days(1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>