force-app/main/default/objects/Snapshot__c/fields/Net_New_Rolling90_Goal__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Rolling90_Goal__c</fullName>
    <formula>(( Net_New_Targets_2021__c /90)*(Days_left_in_this_Quarter__c ))+(( Next_Quarter_Target_2021__c /90)*( Days_left_in_next_quarter__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New - Rolling90 Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>