force-app/main/default/objects/Snapshot__c/fields/Net_New_Targets_2021__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Targets_2021__c</fullName>
    <formula>CASE(MONTH(   Snapshopt_Created_Date2__c  ),
1, 450000,
2, 450000,
3, 450000, 
4, 788000, 
5, 788000, 
6, 788000,
7, 1125000,
8, 1125000,
9, 1125000,
10,1238000,
11,1238000,
12,1238000,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New Targets 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>