force-app/main/default/objects/Snapshot__c/fields/Net_New_Targets_21_22__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Targets_21_22__c</fullName>
    <formula>IF(Fiscal_Year__c=&apos;2021&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 450000,
2, 450000,
3, 450000,
4, 788000,
5, 788000,
6, 788000,
7, 1125000,
8, 1125000,
9, 1125000,
10, 1238000,
11, 1238000,
12, 1238000,
0), 
IF(Fiscal_Year__c=&apos;2022&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 1256570,
2, 1256570,
3, 1256570,
4, 1275419,
5, 1275419,
6, 1275419,
7, 1294550,
8, 1294550,
9, 1294550,
10, 1313968,
11, 1313968,
12, 1313968,
0),0
))</formula>
    <label>Net New Targets 21-22</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>