force-app/main/default/objects/Snapshot__c/fields/Next_Quarter_Target_2021__c.field-meta.xml
<CustomField>
    <fullName>Next_Quarter_Target_2021__c</fullName>
    <formula>CASE(MONTH(   Snapshopt_Created_Date2__c ),
1, 788000,
2, 788000,
3, 788000,
4, 1125000,
5, 1125000,
6, 1125000,
7, 1238000,
8, 1238000,
9, 1238000,
10, 1256570,
11, 1256570,
12, 1256570,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New Next Quarter Target 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>