force-app/main/default/objects/Snapshot__c/fields/NN_365_Days_Goal_2__c.field-meta.xml
<CustomField>
    <fullName>NN_365_Days_Goal_2__c</fullName>
    <formula>(90*( NN_Next_3_Quarter_365_Days_Goal__c/90))+((90- Days_left_in_this_Quarter__c *( NN_Next_4_Quarter_365_Days_Goal__c/90)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NN - 365 Days Goal (2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>