force-app/main/default/objects/Snapshot__c/fields/NN_Deal_Count_Revised_Target__c.field-meta.xml
<CustomField>
    <fullName>NN_Deal_Count_Revised_Target__c</fullName>
    <formula>CASE(MONTH(  Close_Date__c ),
1, 4,
2, 5,
3, 6,
4, 8,
5, 8,
6, 10,
7, 12,
8, 10,
9, 13,
10,13,
11,14,
12,14,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NN Deal Count Revised Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>