force-app/main/default/objects/Snapshot__c/fields/NN_Next_3_Quarter_365_Days_Goal__c.field-meta.xml
<CustomField>
    <fullName>NN_Next_3_Quarter_365_Days_Goal__c</fullName>
    <formula>IF(Fiscal_Year__c=&apos;2021&apos;,
CASE(MONTH( Snapshopt_Created_Date2__c ),
1, 1238000,
2, 1238000,
3, 1238000,
4, 1256570,
5, 1256570,
6, 1256570,
7, 1275419,
8, 1275419,
9, 1275419,
10, 1294550,
11, 1294550,
12, 1294550,
0),
IF(Fiscal_Year__c=&apos;2022&apos;,
CASE(MONTH(Snapshopt_Created_Date2__c ),
1, 1313968,
2, 1313968,
3, 1313968,
4, 1313968,
5, 1313968,
6, 1313968,
7, 1313968,
8, 1313968,
9, 1313968,
10, 1313968,
11, 1313968,
12, 1313968,
0),0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NN - Next 3 Quarter (365 Days Goal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>