force-app/main/default/objects/Snapshot__c/fields/NN_Revised_Target__c.field-meta.xml
<CustomField>
    <fullName>NN_Revised_Target__c</fullName>
    <formula>NN_Deal_Count_Revised_Target__c /5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NN Revised Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>