force-app/main/default/objects/Snapshot__c/fields/Open_Opps_Total__c.field-meta.xml
<CustomField>
    <fullName>Open_Opps_Total__c</fullName>
    <formula>IF( Closed__c = False, Total_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Opps Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>