force-app/main/default/objects/Snapshot__c/fields/Opportunities_Needed__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Needed__c</fullName>
    <formula>(NN_Deal_Count_Revised_Target__c *4) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>