force-app/main/default/objects/Snapshot__c/fields/Perpetual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Amount__c</fullName>
    <formula>IF( TEXT(Product_Family__c ) = &apos;DESKTOP_ENHANCEMENT&apos; || TEXT(Product_Family__c )= &apos;DESKTOP_PRODUCTS&apos; || TEXT(Product_Family__c )= &apos;DESKTOP_SPLA&apos; || TEXT(Product_Family__c )= &apos;PERPETUAL_DISCOUNT&apos;, Total_Price__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perpetual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>