force-app/main/default/objects/Snapshot__c/fields/Pipeline_Win_Value__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Win_Value__c</fullName>
    <formula>IF( Closed__c = True,  Total_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>