force-app/main/default/objects/Snapshot__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <formula>IF(  TEXT(Stage__c)  = &apos;Inbound&apos;, 0,  IF(  TEXT(Stage__c) =&apos;Qualify&apos;, 10,  IF(  TEXT(Stage__c) = &apos;Discovery&apos;, 25,  IF( TEXT(Stage__c) = &apos;Estimation&apos;, 40,  IF( TEXT(Stage__c) = &apos;Proposal&apos;, 50,  IF( TEXT(Stage__c) = &apos;Nurture&apos;, 75,  IF( TEXT(Stage__c) = &apos;Closed Won&apos;, 100,  IF( TEXT(Stage__c  ) =&apos;Closed Lost&apos;, 0,  IF( TEXT(Stage__c) = &apos;Needs Info&apos;, 20,  IF( TEXT(Stage__c) = &apos;Negotiation&apos;, 80,  IF( TEXT(Stage__c) = &apos;Closing&apos;, 95,  IF( TEXT(Stage__c) = &apos;Quote Delivery&apos;, 70,  IF( TEXT(Stage__c) = &apos;Quote Development&apos;  || TEXT(Stage__c) = &apos;Quote Review&apos;, 20,0 ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>