force-app/main/default/objects/Snapshot__c/fields/Probability_Total__c.field-meta.xml
<CustomField>
    <fullName>Probability_Total__c</fullName>
    <formula>Total_Price__c  *  (Probability__c/100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>