force-app/main/default/objects/Snapshot__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLOUD_PRODUCTS</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>DEPOSIT</fullName>
            </value>
            <value>
                <fullName>DESKTOP_ENHANCEMENT</fullName>
            </value>
            <value>
                <fullName>DESKTOP_PRODUCTS</fullName>
            </value>
            <value>
                <fullName>DESKTOP_SPLA</fullName>
            </value>
            <value>
                <fullName>DESKTOP_SUBSCRIPTION</fullName>
            </value>
            <value>
                <fullName>INTELLIGENCE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>REIMBURSEMENT</fullName>
            </value>
            <value>
                <fullName>SALESPAD_SUBSCRIPTION</fullName>
            </value>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTION_CLOUD</fullName>
            </value>
            <value>
                <fullName>SERVICE_AGREEMENTS</fullName>
            </value>
            <value>
                <fullName>ANALYTICS CLOUD</fullName>
            </value>
            <value>
                <fullName>SUBSCRIPTION_DISCOUNT</fullName>
            </value>
            <value>
                <fullName>PERPETUAL_DISCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>