force-app/main/default/objects/Snapshot__c/fields/Quarter_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Quarter_and_Year__c</fullName>
    <formula>CASE(
    MONTH( Close_Date__c ),

    1,&apos;Q1&apos;, 
    2,&apos;Q1&apos;, 
    3,&apos;Q1&apos;, 
    4,&apos;Q2&apos;, 
    5,&apos;Q2&apos;, 
    6,&apos;Q2&apos;, 
    7,&apos;Q3&apos;, 
    8,&apos;Q3&apos;, 
    9,&apos;Q3&apos;, 
    10,&apos;Q4&apos;, 
    11,&apos;Q4&apos;, 
    12,&apos;Q4&apos;,  

    NULL
) + &apos; &apos; + TEXT(YEAR(Close_Date__c ))</formula>
    <label>Quarter and Year</label>
    <type>Text</type>
</CustomField>