force-app/main/default/objects/Snapshot__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>Opportunity Record Type_V2</label>
    <length>90</length>
    <type>Text</type>
</CustomField>