force-app/main/default/objects/Snapshot__c/fields/Rolling_90_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rolling_90_Amount__c</fullName>
    <formula>IF( Rolling_90_Days_Calculation__c &lt;= 90,  Total_Price__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolling 90 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>