force-app/main/default/objects/Snapshot__c/fields/Rolling_90_Days_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Rolling_90_Days_Calculation__c</fullName>
    <formula>Close_Date__c -  Snapshopt_Created_Date2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolling 90 Days Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>