force-app/main/default/objects/Snapshot__c/fields/Snapshopt_Created_Date2__c.field-meta.xml
<CustomField>
    <fullName>Snapshopt_Created_Date2__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshopt Created Date2</label>
    <type>Date</type>
</CustomField>