force-app/main/default/objects/Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Budget Qualification</fullName>
            </value>
            <value>
                <fullName>Business Case</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Confirm Value with Power</fullName>
            </value>
            <value>
                <fullName>Declined Renew</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Delivery Meeting</fullName>
            </value>
            <value>
                <fullName>Estimates</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Finalize Closure</fullName>
            </value>
            <value>
                <fullName>Grace</fullName>
            </value>
            <value>
                <fullName>Identify Opportunity</fullName>
            </value>
            <value>
                <fullName>Needs Info</fullName>
            </value>
            <value>
                <fullName>Negotiate Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Order-to-Cash Value Discussion</fullName>
            </value>
            <value>
                <fullName>Pending Paperwork</fullName>
            </value>
            <value>
                <fullName>Product Manager Review</fullName>
            </value>
            <value>
                <fullName>Proposal/Quote</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Provisioning</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Quote Delivery</fullName>
            </value>
            <value>
                <fullName>Quote Delivery - PM</fullName>
            </value>
            <value>
                <fullName>Quote Development</fullName>
            </value>
            <value>
                <fullName>Quote Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>