force-app/main/default/objects/Snapshot__c/fields/Subscription_ARR_Acct__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ARR_Acct__c</fullName>
    <label>Subscription ARR (Acct)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>